@@ -28,9 +28,11 @@
         /// </summary>
         private void InitializeComponent()
         {
-            System.ComponentModel.ComponentResourceManager resources = new System.ComponentModel.ComponentResourceManager(typeof(FormTag));
             this.splitContainer1 = new System.Windows.Forms.SplitContainer();
             this.GitRevisions = new GitUI.RevisionGrid();
+            this.label2 = new System.Windows.Forms.Label();
+            this.tagMessage = new GitUI.EditNetSpell();
+            this.annotate = new System.Windows.Forms.CheckBox();
             this.Tagname = new System.Windows.Forms.TextBox();
             this.label1 = new System.Windows.Forms.Label();
             this.CreateTag = new System.Windows.Forms.Button();
@@ -53,28 +55,68 @@
             // 
             // splitContainer1.Panel2
             // 
+            this.splitContainer1.Panel2.Controls.Add(this.label2);
+            this.splitContainer1.Panel2.Controls.Add(this.tagMessage);
+            this.splitContainer1.Panel2.Controls.Add(this.annotate);
             this.splitContainer1.Panel2.Controls.Add(this.Tagname);
             this.splitContainer1.Panel2.Controls.Add(this.label1);
             this.splitContainer1.Panel2.Controls.Add(this.CreateTag);
             this.splitContainer1.Size = new System.Drawing.Size(734, 523);
-            this.splitContainer1.SplitterDistance = 489;
+            this.splitContainer1.SplitterDistance = 352;
             this.splitContainer1.TabIndex = 0;
             // 
             // GitRevisions
             // 
+            this.GitRevisions.currentCheckout = null;
             this.GitRevisions.Dock = System.Windows.Forms.DockStyle.Fill;
+            this.GitRevisions.Filter = "";
             this.GitRevisions.HeadFont = new System.Drawing.Font("Microsoft Sans Serif", 8.25F, System.Drawing.FontStyle.Bold);
+            this.GitRevisions.LastRow = 0;
             this.GitRevisions.Location = new System.Drawing.Point(0, 0);
             this.GitRevisions.Name = "GitRevisions";
             this.GitRevisions.NormalFont = new System.Drawing.Font("Microsoft Sans Serif", 8.25F, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, ((byte)(0)));
-            this.GitRevisions.Size = new System.Drawing.Size(734, 489);
+            this.GitRevisions.Size = new System.Drawing.Size(734, 352);
             this.GitRevisions.TabIndex = 0;
+            // 
+            // label2
+            // 
+            this.label2.AutoSize = true;
+            this.label2.Location = new System.Drawing.Point(9, 56);
+            this.label2.Name = "label2";
+            this.label2.Size = new System.Drawing.Size(50, 13);
+            this.label2.TabIndex = 14;
+            this.label2.Text = "Message";
+            // 
+            // tagMessage
+            // 
+            this.tagMessage.Anchor = ((System.Windows.Forms.AnchorStyles)((((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Bottom)
+                        | System.Windows.Forms.AnchorStyles.Left)
+                        | System.Windows.Forms.AnchorStyles.Right)));
+            this.tagMessage.Enabled = false;
+            this.tagMessage.Location = new System.Drawing.Point(110, 56);
+            this.tagMessage.MistakeFont = new System.Drawing.Font("Microsoft Sans Serif", 8.25F, System.Drawing.FontStyle.Underline);
+            this.tagMessage.Name = "tagMessage";
+            this.tagMessage.Size = new System.Drawing.Size(612, 99);
+            this.tagMessage.TabIndex = 13;
+            // 
+            // annotate
+            // 
+            this.annotate.AutoSize = true;
+            this.annotate.Location = new System.Drawing.Point(110, 33);
+            this.annotate.Name = "annotate";
+            this.annotate.Size = new System.Drawing.Size(126, 17);
+            this.annotate.TabIndex = 12;
+            this.annotate.Text = "Create annotated tag";
+            this.annotate.UseVisualStyleBackColor = true;
+            this.annotate.CheckedChanged += new System.EventHandler(this.annotate_CheckedChanged);
             // 
             // Tagname
             // 
-            this.Tagname.Location = new System.Drawing.Point(71, 5);
+            this.Tagname.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Left)
+                        | System.Windows.Forms.AnchorStyles.Right)));
+            this.Tagname.Location = new System.Drawing.Point(110, 7);
             this.Tagname.Name = "Tagname";
-            this.Tagname.Size = new System.Drawing.Size(264, 20);
+            this.Tagname.Size = new System.Drawing.Size(457, 20);
             this.Tagname.TabIndex = 2;
             // 
             // label1
@@ -88,6 +130,7 @@
             // 
             // CreateTag
             // 
+            this.CreateTag.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Right)));
             this.CreateTag.Location = new System.Drawing.Point(626, 2);
             this.CreateTag.Name = "CreateTag";
             this.CreateTag.Size = new System.Drawing.Size(105, 23);
@@ -102,12 +145,11 @@
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.ClientSize = new System.Drawing.Size(734, 523);
             this.Controls.Add(this.splitContainer1);
-            //this.Icon = global::GitUI.Properties.Resources.cow_head;
             this.Name = "FormTag";
             this.StartPosition = System.Windows.Forms.FormStartPosition.CenterParent;
             this.Text = "Tag";
-            this.FormClosing += new System.Windows.Forms.FormClosingEventHandler(this.FormTag_FormClosing);
             this.Load += new System.EventHandler(this.FormTag_Load);
+            this.FormClosing += new System.Windows.Forms.FormClosingEventHandler(this.FormTag_FormClosing);
             this.splitContainer1.Panel1.ResumeLayout(false);
             this.splitContainer1.Panel2.ResumeLayout(false);
             this.splitContainer1.Panel2.PerformLayout();
@@ -123,5 +165,8 @@
         private System.Windows.Forms.Label label1;
         private System.Windows.Forms.Button CreateTag;
         private System.Windows.Forms.TextBox Tagname;
+        private System.Windows.Forms.Label label2;
+        private EditNetSpell tagMessage;
+        private System.Windows.Forms.CheckBox annotate;
     }
 }
