@@ -20,6 +20,7 @@ Version 1.94
 	Added toolbar to diff viewer to jump to next change
 	Added file explorer option to the file menu
 	Added from and to branch to push dialog 
+	Added option to create annotated tag
 	Quicksearch now also searches in branches
 	All windows positions are now saved	
 	Settings dialog performance improved
